@@ -3,12 +3,16 @@ User visible changes for UPX
 ==================================================================
 
 Changes in 4.2.1 (XX XXX XXXX):
+  * windows: use SetFileTime to preserve sub-second timestamps
+  * official Windows builds: revert activeCodePage change introduced in 4.2.0
   * bug fixes - see https://github.com/upx/upx/milestone/14
 
 Changes in 4.2.0 (26 Oct 2023):
   * win32/pe and win64/pe: stricter relocation checks; please report regressions
+  * unix: use utimensat to preserve sub-second file timestamps
   * new option '--link' to preserve hard-links (Unix only; use with care)
   * add support for NO_COLOR env var; see https://no-color.org/
+  * official Windows builds: set activeCodePage to UTF-8
   * disable macOS support until we fix compatibility with macOS 13+
   * bug fixes - see https://github.com/upx/upx/milestone/13
 
